scrollbar-bug fixed

--- a/client/src/app/footer/footer.component.scss
+++ b/client/src/app/footer/footer.component.scss
@@ -2,4 +2,6 @@ footer{
     position:absolute;
     bottom:0;
     width:100%;
+    padding-left:0px !important;
+    padding-right:0px !important;
 }
